[package]
name = "micro_post_service"
version = "0.4.0"
authors = ["Oliver Säfström <safstrom.oliver@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["mongodb"] }
lapin = "2.1.1"
dotenv = "0.15.0"
##rocket_contrib = { version = "0.4.11", features = ["databases"] }

[dev-dependencies]
#dotenv = "0.15.0"
testcontainers = "0.14.0"
